Revise README for project overview and setup
Updated project overview, prerequisites, and setup instructions in README.